data/all_generated_tests/raw_wast_tests/br_if_EdgeCaseFailuresinbr_table_1948.wast
;; 9. **Test Description**: Implement a conditional `br_if` leading out of an `if` block nested in a `loop` with mismatched operand stack types. Following it, insert a `br_table` whose index initially matches to available targets but exceeds later. Confirm nuances between `wizard_engine`'s handling and WASM.

(assert_invalid
  (module (func $differential-test (result i32)
    (loop (result i32)
      (i32.const 42)
      (if (result i32) (i32.const 0)
        (br_if 1 (i64.const 1))
      )
      (br_table 0 1 (i32.const 2))
    )
  ))
  "type mismatch"
)